# term-sort

./: Cargo.toml  README.md
src/: app.rs  handlers.rs  main.rs  sort.rs  ui.rs
src/sort/: bubble.rs  insertion.rs  mod.rs  selection.rs
