[package]
name = "rust-whichsort"
version = "0.1.0"
edition = "2021"
description = "Visualize sorting algorithms in you terminal."
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tui = "0.19"
crossterm = "0.25"
rand = "0.8.5"
